2009-03-05  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/fade/Makefile.am:
	* plugins/fade/ccm-fade.ui:
	* plugins/fade/fade.svg:
	* plugins/fade/ccm-fade.c (ccm_fade_init), (ccm_fade_finalize),
	(ccm_fade_preferences_page_on_duration_changed),
	(ccm_fade_preferences_page_on_config_changed),
	(ccm_fade_preferences_page_on_plugin_changed),
	(ccm_fade_preferences_page_init_effects_section),
	(ccm_fade_preferences_page_iface_init):
	  - Add fade preferences section.
	* lib/ccm-cairo-utils.c (cairo_blur_path):
	  - Minor fixup.
	* plugins/decoration/ccm-decoration.c (ccm_decoration_get_opacity),
	(ccm_decoration_on_option_changed):
	* plugins/decoration/ccm-decoration.ui:
	  - Update decoration on gradiant change.
	* plugins/shadow/ccm-shadow.c (ccm_shadow_on_option_changed):
	  - Fix up shadow refresh on setting change.
	* src/ccm-window-glitz.c (ccm_window_glitz_create_gl_drawable):
	  - Use the first drawable format available instead second.

2009-03-04  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* data/ccm-preferences.ui:
	  - Fix widget name changed on last edit name.
	* plugins/fade/ccm-fade.c (ccm_fade_finalize):
	  - Disconnect display event on finalize fix a crash on multiple plugins
	    activation/desactivation.
	* src/ccm-cell-extension.c (ccm_cell_extension_init),
	(ccm_cell_extension_on_enable_clicked), (ccm_cell_extension_new),
	(ccm_cell_extension_set_active), (ccm_cell_extension_get_active):
	  - Use a variable member instead button label to get/set active.
	* src/ccm-marshallers.list:
	* src/ccm-preferences-page.c (ccm_preferences_page_class_init),
	(ccm_preferences_page_on_plugins_modified),
	(ccm_preferences_page_init_plugins_list),
	(impl_ccm_preferences_page_init_general_section),
	(ccm_preferences_page_new), (ccm_preferences_page_section_p),
	(ccm_preferences_page_section_v):
	* src/ccm-preferences-page.h:
	  - Add plugin state changed signal.
	  - Add ccm_preferences_page_section_[p/v] to indicate if a plugin use or